--- a/styles/main.css
+++ b/styles/main.css
@@ -1,186 +1,362 @@
-/* custom property */
 :root {
-	--accent-color: #800000;  /* could also be coded #800 */
-	--gradient-color: #f6bb73;
-
-	--light_menu: white;
-	--mid_menu: antiquewhite;
-	--dark_menu: black;
+    --accent-color: #800000;
+    --gradient-color: #f6bb73;
+    --light_menu: white;
+    --mid_menu: antiquewhite;
+    --dark_menu: black;
 }
 
-/* reset */
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-/* default styles */
 body {
-	font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
+    border: 2px solid var(--accent-color);
     font-size: calc(15px + .2vw);
-	width: min(80%, 1024px);
-	line-height: 1.5;
-	margin: auto;
-	border: 2px solid var(--accent-color);
+    width: min(80%, 1024px);
+    margin: auto;
+    line-height: 1.5;
 }
+
 h1, h2, h3, p, ul {
-	padding: .25em 0;
+    padding: 4px 0;
 }
-a:hover, a:focus{
-	font-style: italic;
-	color: var(--accent-color);
+
+a:hover, a:focus {
+    font-style: italic;
+    color: var(--accent-color);
 }
+
 h1 {
-	font-size: 150%;
+    font-size: 150%;
 }
+
 h2 {
-	font-size: 130%;
-	color: var(--accent-color);
+    font-size: 130%;
+    color: var(--accent-color);
 }
+
 h3 {
-	font-size: 105%;
+    font-size: 105%;
 }
+
 ul {
-	margin-left: 2em;
+    margin-left: 32px;
 }
 
-/* the styles for the header */
 header {
-	line-height: 1.2;
-	border-bottom: 2px solid var(--accent-color);
-	background-image: linear-gradient(
-	    30deg, var(--gradient-color) 0%, white 30%, white 65%, var(--gradient-color) 100%);
-	& h2 {
-		font-size: 175%;
-		padding: .5em 0 0 0;
-	}
-	& h3 {
-		font-size: 130%;
-		font-style: italic;
-		padding-bottom: 1em;
-	}
-	& img {
-		width: clamp(40px, 15%, 80px);
-		float: left;
-		margin: .75em 1em;
-	}
+    line-height: 1.2;
+    border-bottom: 2px solid var(--accent-color);
+    background-image: linear-gradient(
+            30deg, var(--gradient-color) 0%, white 30%, white 65%, var(--gradient-color) 100%);
+    text-align: center;
+    & h2 {
+        font-size: 175%;
+        padding: 8px 0 0 0;
+    }
+
+    & h3 {
+        font-size: 130%;
+        font-style: italic;
+        padding-bottom: 16px;
+    }
+
+    & img {
+        width: clamp(40px, 15%, 80px);
+        float: left;
+        margin: 12px 16px;
+        display: none;
+    }
 }
 
-/* the styles for the main content */
 main {
-	display: flex;
-	padding: 0 1em 1em;
-	& blockquote {
-		font-style: italic;
-		padding-left: 1em;
-	}
-	& h3 + img { /* speaker images */
-		width: clamp(40px, 50%, 75px);
-		border: 4px double var(--accent-color);
-		border-radius: 10px;
-	}
+    display: flex;
+    padding: 0 16px 16px;
+    flex-direction: column-reverse;
+
+    & blockquote {
+        font-style: italic;
+        padding-left: 16px;
+    }
+
+    & h3 + img {
+        width: clamp(40px, 50%, 75px);
+        border: 4px double var(--accent-color);
+        border-radius: 10px;
+    }
 }
 
-/* the styles for the section */
 section {
-	flex-basis: 75%;
-	padding-left: .5em;
-	& img {
-		width: clamp(100px, 50%, 250px);
-		float: right;
-		margin: 0 1em .25em;
-	}
+    padding-left: 8px;
+    border-bottom: 2px solid var(--accent-color);
+    & img {
+        width: clamp(100px, 50%, 250px);
+        float: right;
+        margin: 0 16px 4px;
+    }
 }
 
-/* the styles for the aside */
 aside {
-	flex-basis: 25%;
-	padding-right: .5em;
+    padding-right: 10px;
 }
 
-/* the styles for the footer */
 footer {
-	background-color: var(--accent-color);
-	& p {
-		text-align: center;
-		color: white;
-		padding: 1em 0;
-	}
+    background-color: var(--accent-color);
+
+    & p {
+        text-align: center;
+        color: white;
+        padding: 16px 0;
+    }
 }
 
-/* CSS class */
 .featured {
-	border-top: 2px solid var(--accent-color);
-	border-bottom: 2px solid var(--accent-color);
-	padding: .5em 0 1em;
-}
-.speaker {
-	& h1 {
-		color: var(--accent-color);
-	}
-	& h2 {
-		color: black;
-	}
-	& p {
-		padding: .5em 0; 
-	}	
-}
-.large {
-	font-size: 125%;
+    border-top: 2px solid var(--accent-color);
+    border-bottom: 2px solid var(--accent-color);
+    padding: 8px 0 16px;
 }
 
-/* styles for the menu */
+.speaker {
+    & h1 {
+        color: var(--accent-color);
+    }
+
+    & h2 {
+        color: black;
+    }
+
+    & p {
+        padding: 8px 0;
+    }
+}
+
+.large {
+    font-size: 125%;
+}
+
 .menu {
-	display: flex;
-	flex-wrap: wrap;
-	& li { 
-		flex-basis: 20%; 
-		text-align: center;
-	}
+    position: absolute;
+    left: 0;
+    background-color: var(--accent-color);
+    width: 40%;
+    display:none;
+}
+
+.menu li {
+    list-style: none;
+}
+
+.menu a {
+    display: block;
+    padding: 16px;
+    text-decoration: none;
+}
+
+#menu-btn {
+    display: none;
+}
+
+.menu-btn {
+    display: inline-block;
+    position: relative;
+    color: white;
+    cursor: pointer;
+    font-size: 120%;
+
+}
+
+.menu-btn::before {
+    content: "☰";
+}
+
+
+#menu-btn:checked ~ .menu {
+    display: block;
+}
+
+#menu-btn:checked + .menu-btn::before {
+    content: "X";
 }
 
 .navbar {
+    background-color: var(--accent-color);
+    position: relative;
 	clear: left;
-	background-color: var(--accent-color);
+	
+    & a:hover, a:focus, a.current {
+		background-color: var(--mid_menu);
+        color: var(--dark_menu);
+    }
+	
 	& a {
 		display: block;
-		padding: 1em;
+		padding: 16px;
 		text-decoration: none;
-		margin: 0 1px 2px;
+		margin: 0 2px 2px 0;
+
 	}
-	& a:link, a:visited { 
-		color: var(--light_menu);
-	}
-	& a:hover, a:focus, a.current {
-		background-color: var(--mid_menu);
-		color: var(--dark_menu);
-	}
-	& ul {
+	
+    & ul {
 		list-style-type: none;
-		padding: 0;
-		margin: 0;
+        padding: 0;
+        margin: 0;
+    }
+	
+
+	& a:link, a:visited {
+		color: var(--light_menu);
 	}
 }
 
 .submenu {
-	position: relative;
-	& small { margin-left: .25em; }
+    position: static;
+    width: 100%;
+    left: 100%;
+    top: 0;
+
+    & small {
+        margin-left: 4px;
+    }
+}
+
+.submenu > a {
+    display: flex;
+	align-items: center;
+    justify-content: space-between;
+}
+
+.submenu > a::after {
+    content: "▶";
+    margin-left: 8px;
+	color: var(--light_menu);
 }
 
 .dropdown {
 	position: absolute;
-	left: 0;
-	right: 0;
-	background-color: var(--accent-color);
-	color: var(--light_menu);
-	display: none;
-	& > li a { margin: 0 2px 2px; }
+    color: var(--light_menu);
+    background-color: var(--accent-color);
+    top: 20%;
+    left: 100%;
+    width: 100%;
+    display: none;
+    & > li a {
+        margin: 2px;
+    }
 }
 
+
+.menu > li:last-child a {
+	margin-right: 0;
+}
 .submenu:hover > .dropdown {
 	display: block;
 }
 
-.menu > li:first-child a { margin-left: 0; }
-.menu > li:last-child a { margin-right: 0; }
+.menu > li:first-child a {
+	margin-left: 0;
+}
+
+
+@media (min-width: 900px) {
+    main {
+        padding-top: 10% !important;
+		flex-direction: row !important;
+    }
+
+    section {
+        flex-basis: 75% !important;
+        border: none;
+    }
+
+	aside {
+        flex-basis: 25% !important;
+    }
+}
+
+@media (min-width: 760px) {
+    .menu {
+        background-color: var(--accent-color);
+        justify-content: space-around;
+        display: flex !important;
+        width: 100% !important;
+		position: relative;
+    }
+
+    .menu li {
+        text-align: center;
+        list-style: none;
+        flex-basis: 20%;
+    }
+
+    .menu-btn {
+        display: none !important;
+    }
+
+    #menu-btn {
+        display: none;
+    }
+
+    #menu-btn:checked ~ .menu {
+        display: flex;
+    }
+
+    .submenu {
+        position: relative;
+        top: auto;
+        right: auto;
+        left: 0;
+    }
+
+    .submenu > a::after {
+        content: "▼" !important;
+        margin-left: var(--mid_menu);
+		color: var(--light_menu);
+    }
+
+    .submenu .dropdown {
+        background-color: var(--accent-color);
+        color: var(--light_menu);
+        top: auto !important;
+        display: none;
+        left: 0;
+        right: 0;
+    }
+
+    .dropdown li a {
+        padding-left: 32px;
+    }
+
+    .submenu:hover > .dropdown {
+        display: block !important;
+    }
+
+    .menu > li:first-child a {
+        margin-left: 0;
+    }
+
+    .menu > li:last-child a {
+        margin-right: 0;
+    }
+
+    .navbar {
+        & a {
+            margin: 0 1px 2px;
+        }
+    }
+}
+
+@media (min-width: 350px){
+    header {
+        text-align: left;
+        & img {
+            width: clamp(40px, 15%, 80px);
+            margin: 12px 16px;
+            display: block;
+            float: left;
+        }
+    }
+
+}	
